remove game stage support, fix crash while staring. code clean